tests/errors/invalid_initial_assignment.ne
function main(): int32
{
    var notString: int64 = "String";
    return 0;
}
